Changelog for Bake

    Lots of work on lots of things
    #1, add incremental building
    #1, mirror the Git repo
    Require a name for the client
    Sort out which directory things are run from
    Change to a separate --host and --port flag
0.1
    Works to some level
0.0
    Initial version, not ready for public use